# imeanflow-robot-arm

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/push_block_demo/: episode_000.npz
docs/: algorithm_notes_zh.md  current_limitations_zh.md  interview_guide_zh.md  method.md  project_card.md
eval_outputs/: eval_log.json
scripts/: franka_push_block_viewer.py  mujoco_3d_demo.py  mujoco_push_block_demo.py  mujoco_push_block_viewer.py  rollout_demo.py  sim_demo.py  train_synthetic.py
src/imeanflow_robotics/: __init__.py  config.py  data.py  evaluate.py  model.py  policy.py  sim.py  sim3d.py  time_embedding.py  train.py
tests/: test_policy.py  test_sim.py  test_sim3d.py
