[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imeanflow-robotics"
version = "0.1.0"
description = "Improved Mean Flow policy for robotic arm action chunk generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Dong" }
]
keywords = ["robotics", "imitation-learning", "flow-matching", "mean-flow", "action-generation"]
dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "tqdm>=4.66",
  "matplotlib>=3.7",
  "pillow>=10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
